@@ -25,6 +25,8 @@ struct webcam_buffer {
 	unsigned char *ptr;
 	int ref;
 	long size;
+	long buffersize;
+	struct webcam_buffer *next;
 };
 
 struct webcam {
